--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,34 @@
 name: base_code_clean_arch_riverpod
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
   sdk: ^3.9.2
 
 dependencies:
+  dio: ^5.9.0
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.21.3+1
+  freezed_annotation: ^3.0.0
+  go_router: ^17.0.0
+  hooks_riverpod: ^3.0.3
+  json_annotation: ^4.8.1
+  riverpod_annotation: ^3.0.3
+  shared_preferences: ^2.5.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
+  build_runner: ^2.7.1
+  custom_lint: ^0.8.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  freezed: ^3.0.0
+  json_serializable: ^6.7.1
+  riverpod_generator: ^3.0.3
+  riverpod_lint: ^3.0.3
 
 flutter:
   uses-material-design: true
